--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>I'm Sorry, My Love</title>
+  <title>I'm Sorry, Sonu</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -43,10 +43,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>I'm Sorry, [Her Name]</h1>
+    <h1>I'm Sorry, Ankita</h1>
     <p class="message">
       I know I hurt you, and there's no excuse for it. I'm truly sorry.<br>
-      You mean the world to me, and I never want to lose what we have.<br>
+      One thing that i have leart from this that we should have trust on each other.<br>
       Please let me make it right.
     </p>
     <a class="btn" href="#letter">Read My Letter</a>
@@ -67,7 +67,7 @@
       I promise to be better — more present, more patient, more loving.<br>
       Can we please talk when you're ready?
     </p>
-    <p><strong>With all my heart,</strong><br>Your [nickname]</p>
+    <p><strong>With all my heart,</strong><br>Your Sonu</p>
   </div>
 </body>
 </html>
