--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1>I'm Sorry, Ankita</h1>
     <p class="message">
       I know I hurt you, and there's no excuse for it. I'm truly sorry.<br>
-      One thing that i have leart from this that we should have trust on each other.<br>
+      One thing that i have learnt from this that we should have trust on each other.<br>
       Please let me make it right.
     </p>
     <a class="btn" href="#letter">Read My Letter</a>
@@ -54,7 +54,7 @@
   </div>
 
   <div id="letter" class="container">
-    <h2>To My Love,</h2>
+    <h2>To My rusleli bolake,</h2>
     <p class="message">
       [Write a heartfelt message here. Be vulnerable. Be real. Share your feelings. Apologize sincerely.]
     </p>
