--- a/index.html
+++ b/index.html
@@ -54,12 +54,42 @@
   </div>
 
   <div id="letter" class="container">
-    <h2>To My rusleli bolake,</h2>
-    <p class="message">
-      [Write a heartfelt message here. Be vulnerable. Be real. Share your feelings. Apologize sincerely.]
-    </p>
-    <a class="btn" href="#final">Next</a>
-  </div>
+  <h2>To My Rusleli Bolake,</h2>
+  <p class="message">
+    I know I messed up, and I can’t express enough how sorry I am for hurting you.  
+    Not a moment goes by where I don’t regret what happened.  
+    You didn’t deserve that pain, especially not from someone who claims to love you.
+
+    <br><br>
+    I realize now how important trust is — how it’s the foundation of everything we’ve built together.  
+    And I took it for granted. That’s on me.  
+    But I’m learning, slowly and painfully, what it truly means to love someone not just with words,  
+    but with actions, with consistency, with respect.
+
+    <br><br>
+    You are more than just my girlfriend — you're my closest friend, my strength,  
+    the person who makes life brighter.  
+    When I say I miss you, I mean I miss your voice, your laugh,  
+    the way you say “rusleli bolake” when I’m being silly, and even the way you scold me when I mess up.  
+    I miss all of it. I miss *us*.
+
+    <br><br>
+    If you’re reading this, I just want you to know I’m not giving up.  
+    I’m not perfect, but I’m ready to grow, to listen, to rebuild that trust — however long it takes.  
+    You deserve that effort. You deserve someone who learns from their mistakes.  
+    You deserve the very best version of me — and that’s what I promise to work toward.
+
+    <br><br>
+    I love you, Ankita.  
+    More than I can put into a website or a letter.  
+    Please, whenever you’re ready, I’m here — heart open, hands open, waiting.
+
+    <br><br>
+    Forever yours,  
+    <br><strong>Sonu</strong>
+  </p>
+</div>
+
 
   <div id="final" class="container">
     <h2>I Want to Make This Right</h2>
