--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
     but with actions, with consistency, with respect.
 
     <br><br>
-    You are more than just my girlfriend — you're my closest friend, my strength,  
+    You're my closest friend, my strength,  
     the person who makes life brighter.  
     When I say I miss you, I mean I miss your voice, your laugh,  
-    the way you say “rusleli bolake” when I’m being silly, and even the way you scold me when I mess up.  
-    I miss all of it. I miss *us*.
+    
 
     <br><br>
     If you’re reading this, I just want you to know I’m not giving up.  
@@ -80,13 +79,13 @@
     You deserve the very best version of me — and that’s what I promise to work toward.
 
     <br><br>
-    I love you, Ankita.  
+    I Adore you, Ankita.  
     More than I can put into a website or a letter.  
     Please, whenever you’re ready, I’m here — heart open, hands open, waiting.
 
     <br><br>
-    Forever yours,  
-    <br><strong>Sonu</strong>
+    Yours,  
+    <br><strong>chotu</strong>
   </p>
 </div>
 
