--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       I promise to be better — more present, more patient, more loving.<br>
       Can we please talk when you're ready?
     </p>
-    <p><strong>With all my heart,</strong><br>Your Sonu</p>
+    <p><strong>With all my heart,</strong><br>Your Chotu</p>
   </div>
 </body>
 </html>
