--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
     Yours,  
     <br><strong>chotu</strong>
   </p>
+    <!-- 🤗 Hug Button (English) -->
+  <button class="btn" onclick="showHug()">🤗 Click here for a virtual hug</button>
+  <p id="hug-message" style="font-size:1.5rem; display:none; margin-top: 1rem;">
+    🤗 A big warm hug from Sonu — just for you 💛
+  </p>
+
+  <a class="btn" href="#final" style="margin-top: 2rem;">Next</a>
 </div>
 
 
